--- a/A11Y.md
+++ b/A11Y.md
@@ -1,1 +1,22 @@
 
+# Usability and Accessibility improvements
+
+## Design Principles
+### Perceivable
+- No colours that are inaccessible, plain UI that isn't cluttered
+- Any non-text content such as icons will have a hover and an aria-label to support screen readers
+    - Non-text contents have text alternative, title and aira-label tags
+- simple structure
+### Operable
+- No colours or screen state changes which cause seizures or prone to epilepsy
+- Titles will determine which page state user in (Main feed, profiles, pop up for forms etc.)
+- Functionality and form submits can be operable with keyboard for whole application
+### Understandable
+- Main feed is layed out to be understandable
+- Any edits or deletions clearly shown (also perceivable), can go through all profiles without a disrupt in 
+flow of the application
+- All functionality operable and most have an instant response in UI (due to polling), feed is updated and so 
+are comments and likes
+### Robust
+- aria-labels for accessibility
+- compatible for all browsers and modern computers, as well as mobile view
