finalising, finished integration test

--- a/A11Y.md
+++ b/A11Y.md
@@ -7,16 +7,24 @@
 - Any non-text content such as icons will have a hover and an aria-label to support screen readers
     - Non-text contents have text alternative, title and aira-label tags
 - simple structure
+- Text size and font are adjustable to accommodate users with low vision or visual impairments.
+- Contrast between text and background is high enough to make content readable for users with color blindness or low vision.
 ### Operable
 - No colours or screen state changes which cause seizures or prone to epilepsy
+- All form fields have clear and concise instructions for completion, with error messages that are easily identifiable and understandable.
 - Titles will determine which page state user in (Main feed, profiles, pop up for forms etc.)
-- Functionality and form submits can be operable with keyboard for whole application
+- Keyboard shortcuts are provided for frequently used actions to help users navigate the application more quickly and easily. (tab, typing and enter for forms)
+- In forms, the first item will be autofocus, allowing user to quickly input and tab to next form item
+- submit can be done with enter, or by tabbing to submit button
 ### Understandable
 - Main feed is layed out to be understandable
 - Any edits or deletions clearly shown (also perceivable), can go through all profiles without a disrupt in 
 flow of the application
+- MUI uses semantic HTML elements for reader navigation and comprehension
 - All functionality operable and most have an instant response in UI (due to polling), feed is updated and so 
 are comments and likes
 ### Robust
 - aria-labels for accessibility
+- mobile view is not impacted
 - compatible for all browsers and modern computers, as well as mobile view
+- Any audio content has a transcript or caption available.
